# qwenray

./: .gitignore  README.md  pyproject.toml
config/: qwen-anyscale.yaml  qwen-ray.yaml
data/: test_dataset.jsonl
src/: data_prep.py  inference.py  train.py
