[project]
name = "qwenray"
version = "0.1.0"
description = "Fine-tune Qwen 2.5 as a Ray distributed computing expert"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "modal>=1.3.0.post1",
    "openai>=2.14.0",
    "peft>=0.18.0",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
